examples/bad/01-BadType1.tms
void main () {
  int i = true && false;
  return;
}